Z-index fix

--- a/src/app/pages/detalle-pokemon/components/characteristics/characteristics.component.scss
+++ b/src/app/pages/detalle-pokemon/components/characteristics/characteristics.component.scss
@@ -1,10 +1,8 @@
 .content2 {
-  margin-top: -55px;
   background-color: rgb(43, 41, 44);
-  z-index: -1;
-  padding-top: 75px;
   color: white;
-
+  margin-top: 0px;
+  padding-top: 25px;
 }
 
 .name {
@@ -32,15 +30,12 @@
   gap: 25px;
   margin-top: 10px;
   margin-bottom: 30px;
-
 }
 
 .characteristics {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 10px;
-  margin-bottom: 30px;
 }
 
 .text1 {
