--- a/src/app/pages/detalle-pokemon/components/image/image.component.scss
+++ b/src/app/pages/detalle-pokemon/components/image/image.component.scss
@@ -1,16 +1,21 @@
 .img {
-  height: 400px;
   /* skeleton bootrap pending */
   background-color: rgb(213, 59, 71);
-  border-radius: 10%;
-  height: 300px;
   width: 300px;
+}
+
+.imageLowestLayer {
+  background-color: rgb(43, 41, 44);
 }
 
 .imageBackground {
   display: flex;
   flex-direction: column;
-  background-color: rgb(213, 59, 71);
   height: 300px;
   align-items: center;
+  background-color: rgb(213, 59, 71);
+  border-bottom-right-radius: 50px;
+  border-bottom-left-radius: 50px;
 }
+
+/* clip-path: polygon(0% 0%, 0% 85%, 1% 90%, 3% 95%, 5% 97%, 10% 99%, 20% 100%, 50% 100%, 80% 100%, 90% 99%, 95% 97%, 97% 95%, 99% 90%, 100% 85%, 100% 0%); */
